# toolkit

./: .gitignore  LICENSE  README.md
codex/: package.json
codex/src/: index.ts
cowork/: README.md
node/mcp/: README.md
node/vercel-ai/: README.md  package.json  tsconfig.json
node/vercel-ai/src/: index.ts  tools.ts
openclaw/: README.md  SKILL.md
opencode/: README.md  package.json
opencode/src/: index.ts
python/langchain/: README.md  pyproject.toml
python/langchain/src/anima_toolkit_langchain/: __init__.py  tools.py
python/openai-agents/: README.md  pyproject.toml
python/openai-agents/src/anima_toolkit_openai/: __init__.py  tools.py
